--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </section>
         <section class="nen">
-              <h2 class="layout">See how it works and get started in less than 2 minutes</h2>
+              <h2>See how it works and get started in less than 2 minutes</h2>
               <img class="video" src="./images/images/video-preview.png" alt="video">
               <buttom class="btn btn-get">Get started</buttom>
         </section>
