--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
                 <buttom class="btn btn-book">Book a demo</buttom>
             </div>
         </section>
-        <section class="nen">
-              <h2>See how it works and get started in less than 2 minutes</h2>
-              <img class="video" src="./images/images/video-preview.png" alt="video">
-              <buttom class="btn btn-get">Get started</buttom>
-        </section>
-    </main>
+        <section class="video bg-black">
+            <div class="container-sm">
+              <h2 class="video-heading text-xl text-center">See how it works and get started in less than 2 minutest</h2>
+              <div class="video-content">  
+                <a href="#"><img src="./images/images/video-preview.png" alt="video" class="video-preview"></a>
+                <buttom class="btn btn-get">Get started</buttom>
+            </div>
+              <div>
+          </section>
+   </main>
 
     <footer>
         Footer
