--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
         </section>
         <section class="video bg-black">
             <div class="container-sm">
-              <h2 class="video-heading text-xl text-center">See how it works and get started in less than 2 minutest</h2>
+              <h2 class="video-heading text-xl">See how it works and get started in less than 2 minutest</h2>
               <div class="video-content">  
                 <a href="#"><img src="./images/images/video-preview.png" alt="video" class="video-preview"></a>
                 <buttom class="btn btn-get">Get started</buttom>
             </div>
-              <div>
           </section>
    </main>
 
